--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "manifest_version": 3,
     "action": {
       "default_popup": "popup.html",
-      "default_icon": ""
+      "default_icon": "icon.png"
     },
     "permissions": [
       "activeTab",
