[STOP] issue 발생
- 문제상황 :
  - 크롬 확장프로그램을 클릭했을 때 html은 보임
  - 블록처리한 텍스트의 앞, 뒤로 <span> 태그가 나오지 않음 -> javascript에 이상 있음.
- 이슈 해결 노력 :
  - https://velog.io/@kaeul_1/Velog-Highlighter-%EB%A7%8C%EB%93%A4%EA%B8%B0-%EA%B2%B0%EA%B3%BC-%EC%8B%A4%ED%8C%A8
- 결론 :
  - 해당 프로젝트 잠정적 중단. 후에 다른 해결방안이 생각나면 올 것.

--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,9 @@
       "activeTab",
       "scripting"
     ],
-    "background": {
-      "service_worker": "background.js"
-    },
+    "host_permissions": [
+        "https://velog.io/*"
+    ],
     "content_scripts": [
       {
         "matches": ["https://velog.io/*"], 
